--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "publish": "tsc",
     "makeData": "tsc && node dist/makeData.js",
     "start": "tsc && node dist/app.js",
-    "test": "ts-mocha"
+    "test": "ts-mocha",
+    "eslint":"npx eslint . --fix --ext .js,.jsx,.ts,.tsx",
+    "format":"npx eslint --fix app"
   },
   "keywords": [],
   "author": "",
@@ -29,8 +31,12 @@
   "devDependencies": {
     "@types/expect": "^24.3.0",
     "@types/mocha": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
     "expect": "^26.6.2",
     "mocha": "^8.4.0",
-    "ts-mocha": "^8.0.0"
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.2.4"
   }
 }
